--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@owstack/key-lib": "0.0.41",
     "bitcore-lib": "^8.3.4",
     "body-parser": "^1.19.0",
+    "coinbase-commerce-node": "^1.0.3",
     "colyseus": "^0.9.13",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
